objects/MPM4_BASE__Milestone1_Project__c.object
<CustomObject>
    <fields>
        <fullName>Health_Check_Reason__c</fullName>
        <label>Health Check Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Check__c</fullName>
        <label>Health Check</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Exclude_Weekend_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Weekend Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Percent_Complete__c</fullName>
        <formula>IF(AND(MPM4_BASE__Total_Open_Task_Count__c != 0), (MPM4_BASE__Total_Complete_Task_Count__c / (MPM4_BASE__Total_Complete_Task_Count__c + MPM4_BASE__Total_Open_Task_Count__c)), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>MPM4_BASE__Milestone1_Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( MPM4_BASE__Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( MPM4_BASE__Total_Expense_Budget__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( MPM4_BASE__Total_Expense_Budget_from_Milestones__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( MPM4_BASE__Total_Expense_Estimate__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  MPM4_BASE__Total_Expense_Incurred__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( MPM4_BASE__Total_Hours_Budget__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( MPM4_BASE__Total_Hours_Budget_from_Milestones__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( MPM4_BASE__Total_Hours_Estimate__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  MPM4_BASE__Total_Hours_Incurred__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Image_HoursSummary__c</fullName>
        <formula>IF( MPM4_BASE__Total_Hours_Budget__c &gt; 0, 
IMAGE(MPM4_BASE__Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Image_OpenVComplete__c</fullName>
        <formula>IF( MPM4_BASE__Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( MPM4_BASE__Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( MPM4_BASE__Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(MPM4_BASE__Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(MPM4_BASE__Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(MPM4_BASE__Total_Open_Task_Count__c / max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(MPM4_BASE__Total_Late_Task_Count__c/ max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Task_Count__c/ max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(MPM4_BASE__Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(MPM4_BASE__Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (MPM4_BASE__Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (MPM4_BASE__Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Blocked_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Complete_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Budget_from_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Incurred__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Budget_from_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Incurred__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Late_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Open_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MPM4_BASE__My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Deadline__c</columns>
        <columns>MPM4_BASE__Total_Blocked_Task_Count__c</columns>
        <columns>MPM4_BASE__Total_Late_Task_Count__c</columns>
        <columns>MPM4_BASE__Total_Open_Task_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>MPM4_BASE__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <validationRules>
        <fullName>MPM4_BASE__Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Deadline__c)) &amp;&amp; MPM4_BASE__Deadline__c &lt; MPM4_BASE__Kickoff__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>MPM4_BASE__Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>MPM4_BASE__Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>